# AutoDeep

./: .gitignore  .pre-commit-config.yaml  .python-version  DEUGGING_NOTES.txt  LICENCE  LightGBM Tests.ipynb  PyTorch Tabular Tests.ipynb  README.md  TABNET_ERROR.txt  base_requirements.txt  current_req.txt  factory.py  pyproject.toml  requirements.txt  run_multiple.sh  runner.py  runner_k.py  runner_k2.py  runner_k3.py  runner_k4.py  runner_kmac.py  setup.py  test  working_requirements.txt
.pt_tmp/: exp_version_manager.yml
SCRATCH/: LightGBMModel.py  MLPTorch.py  SqueezeNet.py  fulldataloader_kfold.py
autodeep/: automl.py  black_output.txt  factory.py  flake8_output.txt  isort_output.txt  pylint_output.txt  runner.py  runner_k.py
autodeep/configuration/: dataset_config.yml  model_config.yml  model_configs.yml
autodeep/dataloaders/: dataloader.py  universal.py
autodeep/evaluation/: generalevaluator.py
autodeep/examples/: example.ipynb  (+1 more)
boomsynth/: .python-version  requirements.txt
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
configuration/: experiment_config.yml  experiment_config_example.yml  experiment_runs.yml  experiment_runs1.yml  experiment_runs2.yml  experiment_runs3.yml  experiment_runs4.yml  run_models.json
dataloaders/: dataloader.py  fulldataloader.py  fulldataloader_kfold.py
evaluation/: generalevaluator.py
examples/: test_auto.ipynb
modelsdefinition/: AutomaticFeatureInteractionModel.py  CatBoostModel.py  CategoryEmbeddingModel.py  FTTransformerModel.py  GANDALF.py  GATE.py  GATE_old.py  LightGBMModel.py  MLP.py  NodeModel.py  ResNetModel.py  ResNetModelLightning.py  SoftOrdering1DCNN.py  SqueezeNet.py  TabNetModel.py  TabTransformerModel.py  XGBoostClassifier.py  XGBoostRegressor.py
modelutils/: earlystopper  trainingutilities.py
notebooks/: Add run elements.ipynb  Add run elements_default.ipynb  Add_run_elements_default.ipynb  Add_run_elements_specific.ipynb  DatasetsExploration.ipynb  DatasetsExplorationBook.ipynb  ExplorationBook-Copy1.ipynb  ExplorationBook.ipynb  GATE + TabNet Tests-Copy1.ipynb  GATE AgeConditions LoadFromStateDict.ipynb  IGTD Tests.ipynb  ProcessExtra.ipynb  ResultsExplorationBook.ipynb  ResultsExplorationBookDefault.ipynb  ResultsExplorationBookFinal.ipynb  S1DCNN Tests.ipynb  SimpleResNet.ipynb  Soft1DCNN-KaggleAgeConditions.ipynb  TabNet Tests.ipynb  TabPFN-Copy1.ipynb  Untitled.ipynb  XGB2.0.ipynb  summary_data.csv  testing_area.py
output/: FRAN.csv  MACOSRUN (1).csv  MACOSRUN.csv  REALRUN _AUG.csv  REALRUN.csv
outputhandler/: outputwriter.py
(+231 files in other folders)
