[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autodeep"
version = "0.1.0"
description = "A short description of your library."
authors = [
    {name = "Your Name", email = "youremail@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
keywords = ["automl", "deep learning", "machine learning"]
dynamic = ["dependencies"]

[tool.setuptools]
packages = ["autodeep"]

[tool.setuptools.package-data]
autodeep = ["py.typed"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}